# sealed-secrets-editor

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
sedit/: main.py
